syntax = "proto3";

option java_package = "ljh.example";

service Register {
  rpc regOnMaster (RegRequest) returns (Empty) {}
}

service Notify {
  rpc notToWorker (NotifyRequest) returns (Empty) {}
}

message RegRequest {
    string id = 1;
    string host = 2;
    int32 port = 3;
}

message NotifyRequest {
    string message = 1;
}

message Empty {
}
